--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,4 +1,4 @@
-name: Update Filters
+name: 自动更新中
 on:
   push:
     paths-ignore:
@@ -7,7 +7,7 @@ on:
       - 'v*'
     branches: [ main ]
   schedule:
-    - cron: 0 8,20 * * *
+    - cron: 0 2,14 * * *
   workflow_dispatch:
      types: [started]
 
